Version 1.0-11 (2013-08-20)
o For R 3.1.0, revised vcov.mlm() to avoid calling summary.mlm() directly
o Cosmetic: fixed long lines in .Rd files to pass R 3.0.1 checks

Version 1.0-10 (2013-06-03)
o Added demo/HE-other.R, exploring other representations of HE plots

Version 1.0-9 (2013-04-19)
o Added Pottery2 data, extending car::Pottery
o Fixed heplot3d to minimize striated rendering of ellipsoids, and also modified default
  colors and fill.alpha

Version 1.0-8 (2013-02-22)
o In heplot.mlm(), added ... to label.ellipse to be able to pass cex=
o Added NLSY data with examples of testing linearHypotheses
o In heplot3d(), rgl.* functions replaced with *3d() equivalents
o Extended gsorth description and examples
 

Version 1.0-7 (2013-02-07)
o Made some heplot3d() examples \dontrun{} to reduce example execution time to satisfy CRAN nits

Version 1.0-6 (2013-01-14)
o Added label.ellipse() as a more general exported function.
o heplot() gets a label.pos= argument allowing more flexible labeling, with
  the label position to be specified (bottom, left, top, right or center)
o Added coefplot S3 generic and a coefplot.mlm method to plot ellipses for mlm coefficients.
  This generalizes car::confidenceEllipse to the mlm setting.

Version 1.0-4 (2012-12-29)
o Added interpPlot for plotting interpolations between two data sets, with data ellipses, etc.
  Main use for this is in animated demos of multivariate statistical concepts.
o interpPlot gains add=, points= and col= arguments for greater control of graphical parameters.

Version 1.0-2 (2012-12-05)
o Added schooldata and further example of comparison of mlm with robmlm()

Version 1.0-1 (2012-10-18)
o Added simple robmlm methods for robust mlms with print and summary methods and a vcov.mlm method.
  This allows heplot() and related methods to show robust HE plots.

Version 1.0-0 (2012-6-3)
o Added Olso data
o Corrected error in demo/OBK.R

Version 0.9-13 (2012-5-18)