@@ -120,7 +120,7 @@ function(mod, ...) UseMethod("heplot3d")
 	}
 	
 	
-	if (!require(car)) stop("car package is required.")
+	#if (!require(car)) stop("car package is required.")
 	if (!require(rgl)) stop("rgl package is required.")    
 	# avoid deprecated warnings from car
 	if (car2 <- packageDescription("car")[["Version"]] >= 2) linear.hypothesis <- linearHypothesis
