@@ -1,6 +1,9 @@
 Version 1.0-11 (2013-08-20)
+o Cosmetic changes to pass CRAN checks
 o For R 3.1.0, revised vcov.mlm() to avoid calling summary.mlm() directly
-o Cosmetic: fixed long lines in .Rd files to pass R 3.0.1 checks
+o fixed long lines in .Rd files for R 3.0.1 checks
+o removed require() calls for MASS & car (Depends:)
+o removed ::: calls to car and stats
 
 Version 1.0-10 (2013-06-03)
 o Added demo/HE-other.R, exploring other representations of HE plots
